--- a/package.json
+++ b/package.json
@@ -1,12 +1,29 @@
 {
   "name": "my-ai-drive",
   "scripts": {
-    "dev": "bun run --hot src/index.ts"
+    "dev": "bun run --hot src/index.ts",
+    "db:generate": "drizzle-kit generate",
+    "db:migrate": "drizzle-kit migrate",
+    "db:push": "drizzle-kit push",
+    "db:studio": "drizzle-kit studio",
+    "db:setup": "drizzle-kit generate && drizzle-kit migrate"
   },
   "dependencies": {
-    "hono": "^4.11.4"
+    "@ai-sdk/google": "^3.0.10",
+    "@hono/zod-validator": "^0.7.6",
+    "@vercel/blob": "^2.0.0",
+    "ai": "^6.0.39",
+    "drizzle-orm": "^0.45.1",
+    "firecrawl-aisdk": "^0.8.1",
+    "hono": "^4.11.4",
+    "nanoid": "^5.1.6",
+    "postgres": "^3.4.8",
+    "youtube-transcript": "^1.2.1",
+    "zod": "^4.3.5"
   },
   "devDependencies": {
-    "@types/bun": "latest"
+    "@types/bun": "latest",
+    "drizzle-kit": "^0.31.8",
+    "typescript": "^5.9.3"
   }
 }
