--- a/package.json
+++ b/package.json
@@ -18,7 +18,8 @@
     "hono": "^4.11.4",
     "nanoid": "^5.1.6",
     "postgres": "^3.4.8",
-    "youtube-transcript": "^1.2.1",
+    "youtube-captions-scraper": "^2.0.3",
+    "youtubei.js": "^16.0.1",
     "zod": "^4.3.5"
   },
   "devDependencies": {
